tests/snapshots/run_wpt_conformance__trtx_gatherElements_float16_3D_input_and_int32_negative_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gatherElements.https.any.js gatherElements float16 3D input and int32 negative indices, trtx
 gatherElements :: gatherElements float16 3D input and int32 negative indices: index 0: actual=-66.0625 expected=89.0625 ulp=43442 tolerance=4
  inputs: gatherElementsInput: [-66.0625, -68.9375, -77, -26.15625, 89.0625, -45.90625, 43.84375, 48.8125]; gatherElementsIndices: [-1, 0, 0, -1] (constant)
  expected gatherElementsOutput: [89.0625, -68.9375, -77, 48.8125]
  actual gatherElementsOutput: [-66.0625, -68.9375, -77, -26.15625]
  expected gatherElementsOutput full nd:
(shape [1, 2, 2])
[89.0625, -68.9375, -77, 48.8125]
  actual gatherElementsOutput full nd:
(shape [1, 2, 2])
[-66.0625, -68.9375, -77, -26.15625]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherElementsInput: f16[2, 2, 2];
  }

  consts {
    operand_0: i32[1, 2, 2] @bytes([255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255]);
  }

  nodes {
    [gatherElementsOutput] = gatherElements(gatherElementsInput, operand_0, axis=0, label="");
  }

  outputs { gatherElementsOutput; }
}
