tests/snapshots/run_wpt_conformance__trtx_gatherND_float16_3D_input_and_2D_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gatherND.https.any.js gatherND float16 3D input and 2D indices, trtx
 gatherND :: gatherND float16 3D input and 2D indices: index 0: actual=-66.0625 expected=51.8125 ulp=42651 tolerance=4
  inputs: gatherNDInput: [-66.0625, -68.9375, -77, -26.15625, 89.0625, -45.90625, 43.84375, 48.8125, 51.8125, 41.9375, -1.1298828125, -50.40625, 90.3125, 55.625, 44.90625, 56.84375]; gatherNDIndices: [1, 0, 0, 1, 1, 1] (constant)
  expected gatherNDOutput: [51.8125, 41.9375, -1.1298828, -50.40625, 89.0625, -45.90625, 43.84375, 48.8125, 90.3125, 55.625 ...] (len=12)
  actual gatherNDOutput: [-66.0625, -68.9375, -77, -26.15625, -66.0625, -68.9375, -77, -26.15625, -66.0625, -68.9375 ...] (len=12)
  expected gatherNDOutput full nd:
[51.8125, 41.9375, -1.1298828, -50.40625, 89.0625, -45.90625, 43.84375, 48.8125, 90.3125, 55.625, ...] (len=12, shape=[3, 4])
  actual gatherNDOutput full nd:
[-66.0625, -68.9375, -77, -26.15625, -66.0625, -68.9375, -77, -26.15625, -66.0625, -68.9375, ...] (len=12, shape=[3, 4])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    gatherNDInput: f16[2, 2, 4];
  }

  consts {
    operand_0: i32[3, 2] @bytes([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0]);
  }

  nodes {
    [gatherNDOutput] = gatherND(gatherNDInput, operand_0, label="");
  }

  outputs { gatherNDOutput; }
}
